fixed double initTimeline, added buidling ids for hash redirection

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html {
     --color-1: #16b;
+    --color-1a: rgba(17, 102, 187, 0);
     --color-1a: #16b0;
     --color-2: #024;
     --color-3: #9cf;
@@ -133,7 +134,7 @@ html {
     z-index: 3;
 }
 .timeheader:after {
-    content: attr(data-building);
+    content: attr(id);
     text-transform: uppercase;
 }
 
