fixed colors, changed loop format

--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 html {
-    --color-1: #16b;
-    --color-1a: rgba(17, 102, 187, 0);
-    --color-1a: #16b0;
-    --color-2: #024;
-    --color-3: #9cf;
+    --color-1: #137;
+    --color-1a: rgba(17, 51, 119, 0);
+    --color-1a: #1370;
+    --color-2: #58d;
+    --color-3: #7af;
 }
 
 #days {
