--- a/index.css
+++ b/index.css
@@ -6,6 +6,22 @@ html {
     --color-3: #7af;
 }
 
+#search {
+    width: 72px;
+    background: white;
+    color: black;
+    font-size: 18px;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 6px;
+    border: 1px solid black;
+    border: 1px solid var(--color-1);
+    border-radius: 6px;
+    margin: 2px;
+    margin-left: auto;
+    display: block;
+}
+
 #days {
     position: absolute;
     z-index: 1;
@@ -23,6 +39,7 @@ html {
     padding: 6px;
     border-radius: 6px;
     margin: 2px;
+    margin-left: auto;
     opacity: 0.75;
     cursor: pointer;
 }
@@ -136,6 +153,10 @@ html {
 .timeheader:after {
     content: attr(id);
     text-transform: uppercase;
+}
+
+.hidden, .hidden + .timetable {
+    display: none;
 }
 
 .timetable {
