--- a/index.css
+++ b/index.css
@@ -86,8 +86,15 @@ html {
     color: white;
     color: var(--color-3);
 }
-#legend:before {
-    content: ''
+#legend.noclass:before {
+    content: 'There are no classes in session today.';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    text-align: center;
+    display: block;
+    z-index: 4;
 }
 
 @media all and (orientation: landscape) {
