--- a/index.css
+++ b/index.css
@@ -7,22 +7,6 @@ html {
     --color-3: #7af;
 }
 
-#query {
-    width: 72px;
-    background: white;
-    color: black;
-    font-size: 18px;
-    text-align: center;
-    text-transform: uppercase;
-    padding: 6px;
-    border: 1px solid black;
-    border: 1px solid var(--color-1);
-    border-radius: 6px;
-    margin: 2px;
-    margin-left: auto;
-    display: block;
-}
-
 #about {
     position: absolute;
     background: black;
@@ -40,12 +24,22 @@ html {
 
 #days {
     position: absolute;
-    width: 0;
-    margin-right: 2px;
+    margin: 2px;
     z-index: 1;
 }
-#days > * {
-    transform: translate(-100%, 0);
+
+#query {
+    width: 72px;
+    background: white;
+    color: black;
+    font-size: 18px;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 6px;
+    border: 1px solid black;
+    border: 1px solid var(--color-1);
+    border-radius: 6px;
+    margin-left: auto;
 }
 
 .day {
@@ -58,8 +52,6 @@ html {
     text-align: center;
     padding: 6px;
     border-radius: 6px;
-    margin: 2px;
-    margin-left: auto;
     opacity: 0.75;
     cursor: pointer;
 }
@@ -110,6 +102,11 @@ html {
     #days {
         right: 50%;
         top: 0;
+        width: 0;
+    }
+    #days > * {
+        transform: translate(-100%, 0);
+        margin: auto 2px 2px auto;
     }
 	#map {
 		bottom: 0;
@@ -128,6 +125,11 @@ html {
     #days {
         right: 0;
         bottom: 50%;
+        height: 0;
+    }
+    #days > * {
+        transform: translate(0, -100%);
+        margin: auto auto 2px 2px;
     }
     .day {
         float: left;
